service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  # annotations: 
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: web-ingress
spec:
  rules:
  - host: mysite.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: websrvc # This is the name of the service
            port:
              number: 8080 # This is the port that the service listens on
